[package]
name = "omni-ffi"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Samvardhan Singh <samvardhan03@gmail.com>"]
description = "Zero-cost C++/CUDA FFI bridge for the OmniPulse Wavelet Scattering Transform engine — GPU-accelerated perceptual fingerprinting from Rust"
license = "Apache-2.0"
repository = "https://github.com/samvardhan03/Module-1.1-omni-ffi"
homepage = "https://github.com/samvardhan03/Module-1.1-omni-ffi"
documentation = "https://docs.rs/omni-ffi"
readme = "README.md"
keywords = ["wavelet", "scattering-transform", "ffi", "cuda", "fingerprinting"]
categories = ["external-ffi-bindings", "mathematics", "science", "multimedia::audio"]

# Ship the C++ bridge sources so consumers can build from the crate tarball.
include = [
    "src/**/*.rs",
    "cpp/**/*.h",
    "cpp/**/*.cpp",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[features]
default = []
# Enables the GPU code path. Links cudart + cufft and compiles the CUDA
# bridge translation unit. Requires nvcc + CUDA toolkit on the build host.
# Not buildable on macOS — intended for Linux GPU build hosts.
cuda = []

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
